fix: remove padding so the actions are in the middle on mobile

--- a/style.css
+++ b/style.css
@@ -597,6 +597,8 @@ h2.action-head {
 @media only screen and (max-width: 992px) {
 	.wrapper-action-grid .action {
 		width: 100%;
+		padding-left: 0;
+		padding-right: 0;
 	}
 	.wrapper {
 		width: 90%;
